AC_PREREQ([2.69])
AC_INIT([WPO], [1.3.5], [zxrlha@gmail.com])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(src/Makefile.am)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AM_PROG_LEX
AC_PROG_YACC

#
AX_BOOST_BASE([1.51.0], [], AC_MSG_ERROR([Boost must be installed on your system. ]))

# c++11
AX_CXX_COMPILE_STDCXX_11()

# End the configure script.
AC_SUBST([AM_CPPFLAGS])
AC_SUBST([AM_CFLAGS])
AC_SUBST([AM_LDFLAGS])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
