bin_PROGRAMS = wpo
BUILT_SOURCES = parser.cpp parser.hpp lexer.cpp
AM_YFLAGS=-d
wpo_SOURCES = expression.hpp expression.cpp \
			  kernel.hpp kernel.cpp \
			  kcm.hpp kcm.cpp \
			  cim.hpp cim.cpp \
			  extraction.hpp extraction.cpp \
			  literal.hpp literal.cpp \
			  wpo.cpp \
			  parser.ypp \
			  lexer.lpp \
			  yyglobal.hpp yyglobal.cpp \
			  output.hpp output.cpp

